fix(chat): don't overflow on long rolls
Closes #89

--- a/src/components/chat/Roll.css
+++ b/src/components/chat/Roll.css
@@ -90,7 +90,6 @@
 .roll-2 {
 	display: flex;
 	min-height: 60px;
-	width: 150px;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
@@ -127,6 +126,8 @@
 .details {
 	color: #999;
 	letter-spacing: 1px;
+	text-align: center;
+	word-break: break-all;
 }
 
 .roll-advantage,
